--- a/Shop.html
+++ b/Shop.html
@@ -45,7 +45,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
       <div class="container">
-          <img src="logo.jpeg" alt=" logo" width="100" height="100">
+          <img src="pictures/logo.jpeg" alt=" logo" width="100" height="100">
           <h1>Tea House</h1>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span><i id="bar" class="fas fa-bars"></i></span>
@@ -79,7 +79,7 @@
   </div> 
     <div class="row mx-auto container-fluid">
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="hibiscus.jpeg" alt = "">
+            <img class="img-fluid mb-3" src="pictures/hibiscus.jpeg" alt = "">
             <div class="star">
             
                 <i class="fas fa-star"></i>
@@ -95,7 +95,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="mint.jpeg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/mint.jpeg" alt="" >
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -109,7 +109,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="orange-lemonade.jpeg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/orange-lemonade.jpeg" alt="" >
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -123,7 +123,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="berries&cream.jpeg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/berries&cream.jpeg" alt="" >
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -139,7 +139,7 @@
         </div>
         <div class="row mx-auto container-fluid">
           <div class="product text-center col-lg-3 col-md-6 col-12">
-              <img class="img-fluid mb-3" src="greentea.jpeg" alt="" >
+              <img class="img-fluid mb-3" src="pictures/greentea.jpeg" alt="" >
               <div class="star">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -154,7 +154,7 @@
               <button class="buy-btn">Buy Now</button>
           </div>
           <div class="product text-center col-lg-3 col-md-6 col-12">
-              <img class="img-fluid mb-3" src="berry-rose.jpeg" alt="">
+              <img class="img-fluid mb-3" src="pictures/berry-rose.jpeg" alt="">
               <div class="star">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -168,7 +168,7 @@
               <button class="buy-btn">Buy Now</button>
           </div>
           <div class="product text-center col-lg-3 col-md-6 col-12">
-              <img class="img-fluid mb-3" src="earl-grey.jpeg" alt="" >
+              <img class="img-fluid mb-3" src="pictures/earl-grey.jpeg" alt="" >
               <div class="star">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -183,7 +183,7 @@
               <button class="buy-btn">Buy Now</button>
           </div>
           <div class="product text-center col-lg-3 col-md-6 col-12">
-              <img class="img-fluid mb-3" src="BluePeaFlower.jpeg" alt="" >
+              <img class="img-fluid mb-3" src="pictures/BluePeaFlower.jpeg" alt="" >
               <div class="star">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -199,7 +199,7 @@
       </div>  
       <div class="row mx-auto container-fluid">
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="mushroom.jpg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/mushroom.jpg" alt="" >
 
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -214,7 +214,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="cat-tea-pot.jpg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/cat-tea-pot.jpg" alt="" >
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -227,7 +227,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="teapot.jpg" alt="" >
+            <img class="img-fluid mb-3" src="pictures/teapot.jpg" alt="" >
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -240,7 +240,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
         <div class="product text-center col-lg-3 col-md-6 col-12">
-            <img class="img-fluid mb-3" src="bluecup.jpg" alt="">
+            <img class="img-fluid mb-3" src="pictures/bluecup.jpg" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
