--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
         <div class="container">
-            <img src="logo.jpeg" alt=" logo" width="100" height="100">
+            <img src="pictures/logo.jpeg" alt=" logo" width="100" height="100">
             <h1>Tea House</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i id="bar" class="fas fa-bars"></i></span>
@@ -60,21 +60,21 @@
     <section id="new" class="w-100">
         <div class="row p-0 m-0">
             <div class="one col-lg-4 col-md-12 col-12 p-0">
-                <img class="img-fluid" src="looseteas.jpeg" alt="">
+                <img class="img-fluid" src="pictures/looseteas.jpeg" alt="">
                 <div class="details">
                     <h2>Loose Leaf Tea</h2>
                     <button class="text-uppercase">Shop now</button>
                 </div>
             </div>
             <div class="one col-lg-4 col-md-12 col-12 p-0">
-                <img class="img-fluid" src="pouring-tea.jpeg" alt="">
+                <img class="img-fluid" src="pictures/pouring-tea.jpeg" alt="">
                 <div class="details">
                     <h2>Tea Pots</h2>
                     <button class="text-uppercase">Shop now</button>
                 </div>
             </div>
             <div class="one col-lg-4 col-md-12 col-12 p-0">
-                <img class="img-fluid" src="cup-set.jpeg" alt="">
+                <img class="img-fluid" src="pictures/cup-set.jpeg" alt="">
                 <div class="details">
                     <h2>Tea Cups</h2>
                     <button class="text-uppercase">Shop now</button>
