--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -22,7 +22,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
         <div class="container">
-            <img src="logo.jpeg" alt=" logo" width="100" height="100">
+            <img src="pictures/logo.jpeg" alt=" logo" width="100" height="100">
             <h1>Tea House</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i id="bar" class="fas fa-bars"></i></span>
